Aura Changelog
==============
1.2.1.3
-------
- Have a good Remembrance Day.
- `-As` results now sort by vote. Use `--abc` to sort alphabetically.
- Updated Italian translation
- Fixed Bash parsing bug

1.2.1.2
-------
- Happy Canadian Thanksgiving
- Bug fixes

1.2.1.1
-------
- Norwegian translation added!
- Dependency checks slightly faster
- `--hotedit` and `--custom` can now be used together
- Bug fixes

1.2.1.0
-------
- New `builduser` option
- `Prelude.head` bug fixed
- Dependency checking is faster
- New `-k` output
- `--absdeps` works properly now
- Other bug fixes

1.2.0.2
-------
- Bug fixes and spelling corrections.

1.2.0.1
-------
- Fixes dependency build order bug.

1.2.0.0
-------
- New operator `-M` for building ABS packages. Has its own family of options.
- Pre-built binary package available (x86_64 only)
- Updates to Aura are now prioritized like pacman updates.
- Dependency checking is now faster.
- Use `-Ccc` to clean the cache of only packages not saved in any package
  record.
- `-Ai` now shows Maintainer name.
- Extensive API changes.

1.1.6.2
-------
- New option `--no-pp`. Disables use of powerpill, even if you have it.
- This is a light release, as major work is being done on version 1.2 on
  another development branch.

1.1.6.1
-------
- Compatable with pacman 4.1
- All pacman-color support removed
- `-As` output slightly altered to match pacman.
- Bug fixes.

1.1.6.0
-------
- New option `--build` for specifying AUR package build path.
- Vote number now shown in `-As` output.
- Fixed Repo/AUR name collision bug.
- API Change: Argument order for functions in `Aura/Languages` changed.

1.1.5.0
-------
- `customizepkg` now usable with Aura.
  Activate with the `--custom` option.
- API Change: Aura/Pkgbuilds now a set of libraries as Aura/Pkgbuild/*

1.1.4.3
-------
- Fixed flaw in `-Br`.
- Fixed repititious `-Ad` output.
- API Change: Aura/AurConnection renamed to Aura/AUR