@@ -33,7 +33,7 @@ module Aura.Commands.A
 import Text.Regex.PCRE ((=~))
 import Control.Monad
 import Data.Monoid
-import qualified Data.Set as Set (member, fromList)
+import qualified Data.Set as S (member, fromList)
 
 import           Aura.Install (InstallOptions(..))
 import qualified Aura.Install as I
@@ -123,21 +123,16 @@ renderAurPkgInfo ss info = entrify ss fields entries
 aurSearch :: [String] -> Aura ()
 aurSearch []    = return ()
 aurSearch regex = ask >>= \ss -> do
-    db       <- getForeignPackages >>= return . Set.fromList . map fst
-    results  <- aurSearchLookup regex >>= return . map (\x -> let n = nameOf x in (x, n `Set.member` db))
-    mapM_ (renderSearch ss (unwords regex)) results
+    db      <- S.fromList . map fst <$> foreignPackages
+    results <- map (\x -> (x, nameOf x `S.member` db)) <$> aurSearchLookup regex
+    mapM_ (liftIO . putStrLn . renderSearch ss (unwords regex)) results
 
-renderSearch :: Settings -> String -> (PkgInfo, Bool) -> Aura ()
+renderSearch :: Settings -> String -> (PkgInfo, Bool) -> String
 renderSearch ss r (i, e) = searchResult
     where searchResult = if beQuiet ss then sparseInfo else verboseInfo
-          sparseInfo  = do
-              case e of True -> liftIO $ putStrLn $ nameOf i ++ m
-                        _    -> liftIO $ putStrLn $ nameOf i
-                        
-          verboseInfo = do
-              case e of True -> liftIO $ putStrLn $ repo ++ n ++ " " ++ v ++ " (" ++ l ++ ")" ++ m ++ "\n    " ++ d
-                        _    -> liftIO $ putStrLn $ repo ++ n ++ " " ++ v ++ " (" ++ l ++ ")\n    " ++ d
-                        
+          sparseInfo   = nameOf i ++ if e then s else ""
+          verboseInfo  = repo ++ n ++ " " ++ v ++ " (" ++ l ++ ")" ++
+                         (if e then s else "") ++ "\n    " ++ d
           c cl cs = case cs =~ ("(?i)" ++ r) of
                       (b,m,a) -> cl b ++ bCyan m ++ cl a
           repo = magenta "aur/"
@@ -146,7 +141,7 @@ renderSearch ss r (i, e) = searchResult
           l = yellow . show . votesOf $ i  -- `l` for likes?
           v | isOutOfDate i = red $ latestVerOf i
             | otherwise     = green $ latestVerOf i
-          m = c bForeground $ " [installed]"
+          s = c bForeground $ " [installed]"
                               
 displayPkgDeps :: [String] -> Aura ()
 displayPkgDeps ps = do
